<resources>
    <string name="app_name">My Application</string>

    <string name="VIEW_MY_CONTACTS">VIEW MY CONTACTS</string>

    <string name="Edit_profile">Edit profile</string>

    <string name="Go_to">Go to settings and fill out the profile</string>

    <string name="Home_address">Home address</string>

    <string name="Career">Career</string>

    <string name="Name">Lucile Alvarado</string>

    <string name="Settings">Settings</string>

    <string name="Log_out">Log out</string>

    <string name="Lets_get">Let\'s get acquainted</string>

    <string name="Fill_out">Fill out the profile and go to the application!</string>

    <string name="Email">E-mail</string>

    <string name="Pass">Password</string>

    <string name="Remember_me">Remember me</string>

    <string name="Google">GOOGLE</string>

    <string name="or">or</string>

    <string name="Register">REGISTER</string>

    <string name="Term">By clicking Register you agree to our Terms
        and Conditions</string>

</resources>