<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <FrameLayout
        android:layout_width="328dp"
        android:layout_height="58dp"
        android:layout_marginVertical="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="328dp"
            android:layout_height="31dp"
            android:text="@string/Lets_get"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="328dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom|center"
            android:text="@string/Fill_out"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="328dp"
        android:layout_height="172dp"
        android:layout_marginVertical="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="328dp"
            android:layout_height="57dp"
            app:boxBackgroundMode="none"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="328dp"
                android:layout_height="57dp"
                android:hint="@string/Email"
                android:textColorHint="@color/gray_dark"
                android:textColor="@color/white"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="57dp"
            android:background="@color/gray" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passInputLayout"
            android:layout_width="328dp"
            android:layout_height="57dp"
            android:layout_marginTop="67dp"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEditText"
                android:layout_width="328dp"
                android:layout_height="57dp"
                android:hint="@string/Pass"
                android:textColorHint="@color/gray_dark"
                android:textColor="@color/white"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="124dp"
            android:background="@color/gray" />


        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/Remember_me"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="331dp"
        android:layout_height="208dp"

        android:layout_marginTop="420dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="top|center"
            android:background="@drawable/google_log_in"
            android:drawableLeft="@drawable/google_icon"
            android:drawablePadding="-110dp"
            android:paddingLeft="110dp"
            android:text="@string/Google"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry,TouchTargetSizeCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="60dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="328dp"
            android:layout_height="55dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="105dp"
            android:background="@drawable/register_button"
            android:letterSpacing="0.1"
            android:text="@string/Register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="170dp"
            android:text="@string/Term"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="18dp"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="35dp"
            android:text="Sign in"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />


        <TextView
            android:layout_width="173dp"
            android:layout_height="18dp"
            android:layout_gravity="bottom|center"
            android:text="Already have an account?"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>